# Datawarehouse

./: ETL.ipynb  README.md  main.py  processing.py  pyproject.toml  reformatter.py  renames.json  settings.py  tableutils.py  test.py  utils.py
dashboards/: Returns.pbix
